--- a/package.json
+++ b/package.json
@@ -2,14 +2,24 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "deploy": "hexo clean && hexo generate -d",
+    "generate": "hexo clean && hexo generate && hexo server --p 4088"
+  },
   "hexo": {
     "version": "3.2.2"
   },
   "dependencies": {
-    "hexo": "^3.2.0",
-    "hexo-deployer-git": "^0.2.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.2",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "hexo": "^3.2.2",
+    "hexo-browsersync": "^0.2.0",
+    "hexo-deployer-git": "^0.0.4",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.2.0",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
@@ -17,7 +27,8 @@
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-sass": "^0.2.0",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "node-sass": "^4.5.0"
   },
   "devDependencies": {}
 }
